--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,9 +53,13 @@
         </div>
         <p><strong>📌 Important:</strong></p>
         <ul>
-            <li><strong>Name files clearly</strong>: Use a descriptive name so it's easy to understand what's inside.
+            <li><strong>Files allowed</strong>: For now only PDF and CSV files are allowed.</li>
+            <li><strong>Name files clearly</strong>: Use a descriptive file name so it's easy for others to understand
+                what's inside.
             </li>
-            <li><strong>Disclaimer</strong>: Your file is converted to embeddings and stored in a vector DB.</li>
+            <li><strong>Disclaimer</strong>: Your file will be converted to embeddings and stored in a vector DB.</li>
+            <li><strong>Write queries precisely</strong>: Write your queries perfectly to get accurate and precise
+                answers.</li>
         </ul>
 
     </div>
